--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@
                     <div align="center">
                         <img src="./Files/x2.png" title="ris" alt="ris" width="40%"
                             style="display:block; margin:0 auto;">
-                        <!--<i>Temporarily used for style demo.</i>-->
                     </div>
                     Reconfigurable intelligent surfaces (RISs) are regarded as one of the most promising techniques for
                     enhancing the spectrum/energy efficiency of wireless systems. <mark>Channel estimation</mark> of
@@ -263,20 +262,26 @@
                         <summary>Related Work</summary>
 
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R1] S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M.-S. Alouini, "Deep Denoising Neural
+                            <span>
+                                <font color="#FF0000">[R1]</font> S. Liu, Z. Gao, J. Zhang, M. D. Renzo and M.-S.
+                                Alouini, "Deep Denoising Neural
                                 Network Assisted Compressive Channel Estimation for mmWave Intelligent Reflecting
                                 Surfaces," IEEE Transactions on Vehicular Technology, vol. 69, no. 8, pp. 9223-9228,
                                 Aug. 2020.
                             </span>
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R2] Z. Wan, Z. Gao and M.-S. Alouini, "Broadband Channel Estimation for Intelligent
+                            <span>
+                                <font color="#FF0000">[R2]</font> Z. Wan, Z. Gao and M.-S. Alouini, "Broadband Channel
+                                Estimation for Intelligent
                                 Reflecting Surface Aided mmWave Massive MIMO Systems," 2020 IEEE International
                                 Conference on Communications (ICC), Dublin, Ireland, 2020, pp. 1-6.
                             </span>
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R3] Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO with
+                            <span>
+                                <font color="#FF0000">[R3]</font> Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini,
+                                "Terahertz Massive MIMO with
                                 Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
                                 Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
                             </span>
@@ -289,12 +294,19 @@
                     <div align="center">
                         <img src="./Files/x3.png" title="sags" alt="sags" width="55%"
                             style="display:block; margin:0 auto;">
-                        <i>Temporarily used for style demo.</i>
+                        <!--<i>Temporarily used for style demo.</i>-->
                     </div>
+                    The emerging space-air-ground integrated network (SAGINs) has attracted intensive research and
+                    necessitates reliable and efficient aeronautical communications. We have investigated Terahertz
+                    Ultra-Massive (UM)-MIMO-based <mark>aeronautical communications</mark> and proposes an effective
+                    <mark>channel estimation and tracking scheme</mark>, which can solve the performance degradation
+                    problem caused by the unique triple delay-beam-Doppler squint effects of aeronautical terahertz
+                    UM-MIMO channels <font color="#FF0000">[R1]</font>. We have also proposed an edge computing paradigm
+                    for massive IoT connectivity over <mark>High-Altitude Platform Networks (HAPNs)</mark> <font color="#FF0000">[R2]</font>.
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R1] A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini, "Terahertz
+                            <span><font color="#FF0000">[R1]</font> A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini, "Terahertz
                                 Ultra-Massive MIMO-Based Aeronautical Communications in Space-Air-Ground Integrated
                                 Networks," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 6, pp.
                                 1741-1767, June 2021.
@@ -302,14 +314,13 @@
 
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R2] M. Ke, Z. Gao, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu, J. Zhang, "An Edge
-                                Computing
-                                Paradigm for Massive IoT Connectivity over High-Altitude Platform Networks," arXiv
-                                preprint arXiv:2106.13476 (2021). (Pre-Print)
+                            <span><font color="#FF0000">[R2]</font> M. Ke, Z. Gao, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu, J. Zhang, "An Edge
+                                Computing Paradigm for Massive IoT Connectivity over High-Altitude Platform Networks,"
+                                arXiv preprint arXiv:2106.13476 (2021). (Pre-Print)
                             </span>
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R3] Reserved.
+                            <span><font color="#FF0000">[R3]</font> Reserved.
                             </span>
                         </p>
                     </details>
