--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2021.08]</font>
+                    </b> Dr. Zhen Gao is the recipient of 2020 MOST Cited Chinese Researchers according to Scopus (
+                    <a href=" " target="_blank">
+                        <font>高镇 入选爱思唯尔2020中国高被引学者</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2021.08]</font>
                     </b> Paper of Yang Wang was accepted by <b>IEEE Internet of Things Journal</b> (
                     <a href=" " target="_blank">
                         <font>王洋论文被IoTJ期刊(<b>IF=9.471</b>)录用</font>
@@ -302,11 +310,14 @@
                     <mark>channel estimation and tracking scheme</mark>, which can solve the performance degradation
                     problem caused by the unique triple delay-beam-Doppler squint effects of aeronautical terahertz
                     UM-MIMO channels <font color="#FF0000">[R1]</font>. We have also proposed an edge computing paradigm
-                    for massive IoT connectivity over <mark>High-Altitude Platform Networks (HAPNs)</mark> <font color="#FF0000">[R2]</font>.
+                    for massive IoT connectivity over <mark>High-Altitude Platform Networks (HAPNs)</mark>
+                    <font color="#FF0000">[R2]</font>.
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span><font color="#FF0000">[R1]</font> A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini, "Terahertz
+                            <span>
+                                <font color="#FF0000">[R1]</font> A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K.
+                                Ng, M.-S. Alouini, "Terahertz
                                 Ultra-Massive MIMO-Based Aeronautical Communications in Space-Air-Ground Integrated
                                 Networks," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 6, pp.
                                 1741-1767, June 2021.
@@ -314,13 +325,16 @@
 
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span><font color="#FF0000">[R2]</font> M. Ke, Z. Gao, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu, J. Zhang, "An Edge
+                            <span>
+                                <font color="#FF0000">[R2]</font> M. Ke, Z. Gao, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu,
+                                J. Zhang, "An Edge
                                 Computing Paradigm for Massive IoT Connectivity over High-Altitude Platform Networks,"
                                 arXiv preprint arXiv:2106.13476 (2021). (Pre-Print)
                             </span>
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span><font color="#FF0000">[R3]</font> Reserved.
+                            <span>
+                                <font color="#FF0000">[R3]</font> Reserved.
                             </span>
                         </p>
                     </details>
