--- a/index.html
+++ b/index.html
@@ -384,12 +384,41 @@
                     <div align="center">
                         <img src="./Files/x5.png" title="thz" alt="thz" width="85%"
                             style="display:block; margin:0 auto;">
-                        <i>Temporarily used for style demo.</i>
                     </div>
+                    The massive MIMO systems provide considerable beamforming gain and fine-grain spatial multiplexing
+                    for mmWave and Terahertz communications. Both the hardware design and software design are critical
+                    for mmWave/Terahertz massive MIMO.
+                    The <mark>lens-array</mark> and <mark>reconfigurable intelligent surface</mark> with antenna
+                    switching network <font color="#FF0000">[R1] [R2]</font> is adopted for mmWave communications to
+                    cope with the high hardware complexity and power consumption of traditional massive MIMO.
+                    Moreover, in the face of severe spatial wideband effective in the broadband Terahertz massive MIMO,
+                    an architecture based on true-time-delay line is presented in <font color="#FF0000">[R3]</font>.
+                    With the novel hardware architectures above, advanced algorithms, such as ESPRIT <font
+                        color="#FF0000">[R3] [R4]</font>, is also proposed to estimate the large-scale channels via
+                    limited pilot overhead.
                     <details>
                         <summary>Related Work</summary>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R1] A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K. Ng, M.-S. Alouini, "Terahertz
+                            <span>
+                                <font color="#FF0000">[R1]</font> Z. Wan, Z. Gao, B. Shim, K. Yang, G. Mao and M.
+                                Alouini, "Compressive Sensing
+                                Based Channel Estimation for Millimeter-Wave Full-Dimensional MIMO With Lens-Array,"
+                                IEEE Transactions on Vehicular Technology, vol. 69, no. 2, pp. 2337-2342, Feb. 2020.
+                            </span>
+                        </p>
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
+                            <span>
+                                <font color="#FF0000">[R2]</font> Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini,
+                                "Terahertz Massive MIMO with
+                                Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
+                                Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
+                            </span>
+                        </p>
+
+                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
+                            <span>
+                                <font color="#FF0000">[R3]</font> A. Liao, Z. Gao, D. Wang, H. Wang, H. Yin, D. W. K.
+                                Ng, M.-S. Alouini, "Terahertz
                                 Ultra-Massive MIMO-Based Aeronautical Communications in Space-Air-Ground Integrated
                                 Networks," in IEEE Journal on Selected Areas in Communications, vol. 39, no. 6, pp.
                                 1741-1767, June 2021.
@@ -397,23 +426,15 @@
 
                         </p>
                         <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R2] A. Liao, Z. Gao, H. Wang, S. Chen, M.-S Alouini and H. Yin, "Closed-Loop Sparse
+                            <span>
+                                <font color="#FF0000">[R4]</font> A. Liao, Z. Gao, H. Wang, S. Chen, M.-S Alouini and H.
+                                Yin, "Closed-Loop Sparse
                                 Channel Estimation for Wideband Millimeter-Wave Full-Dimensional MIMO Systems," IEEE
                                 Transactions on Communications , vol. 67, no. 12, pp. 8329-8345, Dec. 2019.
                             </span>
                         </p>
-                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R3] Z. Wan, Z. Gao, F. Gao, M. D. Renzo, M.-S. Alouini, "Terahertz Massive MIMO with
-                                Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
-                                Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
-                            </span>
-                        </p>
-                        <p style="text-indent: -2.0rem;margin-left: 3.0rem;width: 90%">
-                            <span>[R4] Z. Wan, Z. Gao, B. Shim, K. Yang, G. Mao and M. Alouini, "Compressive Sensing
-                                Based Channel Estimation for Millimeter-Wave Full-Dimensional MIMO With Lens-Array,"
-                                IEEE Transactions on Vehicular Technology, vol. 69, no. 2, pp. 2337-2342, Feb. 2020.
-                            </span>
-                        </p>
+
+
                     </details>
                 </li>
 
