--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./Files/jemdoc.css" type="text/css" />
     <script src="jquery.min.js"></script>
     <link rel="shortcut icon" href="./Files/favicon.jpg">
-    <title>Zhen Gao</title>
+    <title>Zhen Gao (BIT) Research Homepage</title>
 </head>
 
 
