--- a/index.html
+++ b/index.html
@@ -1302,6 +1302,10 @@
                 <br />
                 <br />
 
+                <A NAME="Report..">
+                    <h2><i class="fas fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report..</h2>
+                </A>
+                <a href=mailto:scliubit@163.com>Click for a bug report</a>
 
                 <script type="text/javascript"
                     src="//rf.revolvermaps.com/0/0/8.js?i=5kt146cjjfk&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=33"
