--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                                 <A HREF="#Publications">Publications</A> |
                                 <A HREF="#Patents">Patents</A> |
                                 <A HREF="#Services">Services</A> |
-                                <A HREF="#Awards">Awards</A>
+                                <A HREF="#Awards">Awards</A> |
+                                <A HREF="#Statistics">Statistics</A> |
                                 <br />
                                 <br /> Email: <a href=mailto:gaozhen16@bit.edu.cn>gaozhen16@bit.edu.cn</a> (prior);
                                 &nbsp;&nbsp;&nbsp;&nbsp;
@@ -1302,10 +1303,10 @@
                 <br />
                 <br />
 
-                <A NAME="Report..">
-                    <h2><i class="fas fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report..</h2>
+                
+                <A NAME="Statistics">
+                    <h2><i class="fas fa-universal-access" aria-hidden="true"></i>&nbsp;&nbsp;Statistics</h2>
                 </A>
-                <a href=mailto:scliubit@163.com>Click for a bug report</a>
 
                 <script type="text/javascript"
                     src="//rf.revolvermaps.com/0/0/8.js?i=5kt146cjjfk&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=georgia&amp;l=33"
@@ -1339,6 +1340,11 @@
 
                     });
                 </script>
+                <A NAME="Report">
+                    <h2><i class="fas fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report</h2>
+                </A>
+                <br />
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=mailto:scliubit@163.com><font color="#99a2aa">Click here for a bug report</font></a>
 
 
                 <!--
