--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
 
                 
                 <A NAME="Statistics">
-                    <h2><i class="fas fa-universal-access" aria-hidden="true"></i>&nbsp;&nbsp;Statistics</h2>
+                    <h2><i class="fa fa-universal-access" aria-hidden="true"></i>&nbsp;&nbsp;Statistics</h2>
                 </A>
 
                 <script type="text/javascript"
@@ -1341,7 +1341,7 @@
                     });
                 </script>
                 <A NAME="Report">
-                    <h2><i class="fas fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report</h2>
+                    <h2><i class="fa fa-bug" aria-hidden="true"></i>&nbsp;&nbsp;Report</h2>
                 </A>
                 <br />
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=mailto:scliubit@163.com><font color="#99a2aa">Click here for a bug report</font></a>
