--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2021.09]</font>
+                    </b> Paper of Yikun Mei was accepted by <b>IEEE Transactions on Wireless Communications</b>(
+                    <a href=" " target="_blank">
+                        <font>梅逸堃 论文被TWC(<b>IF=7.016</b>)期刊录用</font>
+                    </a>)【海量物联网非正交多址接入】
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2021.08]</font>
                     </b> Dr. Zhen Gao is the recipient of 2020 MOST Cited Chinese Researchers according to Scopus (
                     <a href=" " target="_blank">
