--- a/ws.html
+++ b/ws.html
@@ -5,3 +5,5 @@ Last Update 2021-9-1 13:17:55 by scliu
 10.104.11.4                 2x Titan RTX    175GB Mem
 <br />
 10.62.12.12 (Temporary)     2x 2080Ti       256GB Mem
+<br />
+10.104.11.8                 3x 2080Ti       64GB Mem
