--- a/ws.html
+++ b/ws.html
@@ -2,8 +2,29 @@
 <br />
 Last Update 2021-9-1 13:17:55 by scliu
 <br />
-10.104.11.4                 2x Titan RTX    175GB Mem
-<br />
-10.62.12.12 (Temporary)     2x 2080Ti       256GB Mem
-<br />
-10.104.11.8                 3x 2080Ti       64GB Mem
+<table border="1">
+    <tr>
+        <th>IP Address</th>
+        <th>CPU</th>
+        <th>GPU</th>
+        <th>Mem</th>
+    </tr>
+    <tr>
+        <td>10.62.12.12</td>
+        <td>i9</td>
+        <td>2x 2080Ti</td>
+        <td>256G</td>
+    </tr>
+    <tr>
+        <td>10.104.11.4</td>
+        <td>i9</td>
+        <td>2x Titan RTX</td>
+        <td>175G</td>
+    </tr>
+    <tr>
+        <td>10.104.11.8</td>
+        <td>i9</td>
+        <td>3x 2080Ti</td>
+        <td>64G</td>
+    </tr>
+</table>
