--- a/ws.html
+++ b/ws.html
@@ -28,3 +28,8 @@ Last Update 2021-9-7 22:09:56 by scliu
         <td>64G</td>
     </tr>
 </table>
+
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7864782&style=0006&nbdigits=5&type=page&initCount=0"
+        title="Free Counter" Alt="web counter" border="0" /></a>
