--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                             Domains?," in IEEE Communications Magazine, vol. 59, no. 7, pp. 30-36, July 2021.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">URL</a>]
-                            [<a href="leodemo.html" target="_blank">LEO Satellite Demo</a>]
+                            [<a href="leodemo.html" target="_blank"><i class="fa fa-hand-o-right" aria-hidden="true"></i>LEO Satellite Demo</a>]
                         </span>
 
                     </p>
