--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2021.10]</font>
+                    </b> Ph.D. students Anwen Liao, Malong Ke, Ziwei Wan and M.S. student Shicong Liu are awarded National Scholarship(
+                    <a href=" " target="_blank">
+                        <font>博士生廖安文,柯玛龙,万子维,硕士生刘仕聪获得研究生国家奖学金</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2021.09]</font>
                     </b> Paper of Yikun Mei was accepted by <b>IEEE Transactions on Wireless Communications</b>(
                     <a href=" " target="_blank">
@@ -153,17 +161,16 @@
                     </a>)【模型驱动深度学习的MIMO传输】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2021.03]</font>
-                    </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
-                    <a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">
-                        <font>廖安文 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
-                    </a>)
-                </li>
-
-
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2021.03]</font>
+                        </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in
+                            Communications</b>(
+                        <a href="https://ieeexplore.ieee.org/document/9398858" target="_blank">
+                            <font>廖安文 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
+                        </a>)
+                    </li>
                     <li> <b>
                             <font color="#FF0000">[2021.02]</font>
                         </b> Paper of Ziwei Wan was accepted by <b>IEEE Transactions of Communications</b>(
@@ -588,7 +595,9 @@
                             Domains?," in IEEE Communications Magazine, vol. 59, no. 7, pp. 30-36, July 2021.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">URL</a>]
-                            [<a href="leodemo.html" target="_blank"><font color="#FF0000">LEO Satellite Demo</font></a>]
+                            [<a href="leodemo.html" target="_blank">
+                                <font color="#FF0000">LEO Satellite Demo</font>
+                            </a>]
                         </span>
 
                     </p>
@@ -1220,6 +1229,10 @@
                 </A>
                 <font size="3">
                     <ul>
+                        <li>Z. Gao, Y. Sun, J. Mao, H. Wang, 一种基于码本的自适应分组宽带混和波束赋形设计方法. Patent No.
+                            201910791311.7, Publication No. CN110518952B.</li>
+                        <li>Z. Gao, A. Liao, K. Yang, H. Wang, 一种基于超分辨率角度和时延估计的宽带信道估计方法. Patent No.
+                            201810778028.6, Publication No. CN108933745B.</li>
                         <li>Z. Gao, Z. Wan, A. Liao, Z. Xiao, K. Yang, 利用冗余字典加强稀疏性的透镜天线阵列信道估计方法. Patent No.
                             201910879291.9, Publication No. CN110650103B.</li>
                         <li>Z. Gao, M. Ke, Z. Xiao, and Y. Wu, 一种自适应开销的活跃用户检测和信道估计方法. Patent No. 201910345235.7,
