--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2021.10]</font>
-                    </b> Ph.D. students Anwen Liao, Malong Ke, Ziwei Wan and M.S. student Shicong Liu are awarded National Scholarship(
+                    </b> Ph.D. students Anwen Liao, Malong Ke, Ziwei Wan and M.S. student Shicong Liu are awarded
+                    National Scholarship(
                     <a href=" " target="_blank">
                         <font>博士生廖安文,柯玛龙,万子维,硕士生刘仕聪获得研究生国家奖学金</font>
                     </a>)
@@ -153,16 +154,18 @@
                     </a>)【LEO卫星与B5G垂直应用】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2021.04]</font>
-                    </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
-                    <a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">
-                        <font>马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
-                    </a>)【模型驱动深度学习的MIMO传输】
-                </li>
+
 
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2021.04]</font>
+                        </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
+                        <a href="https://ieeexplore.ieee.org/document/9452036" target="_blank">
+                            <font>马西锁 论文被JSAC(<b>IF=11.42</b>)期刊录用</font>
+                        </a>)【模型驱动深度学习的MIMO传输】
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2021.03]</font>
                         </b> Paper of Anwen Liao was accepted by <b>IEEE Journal on Selected Areas in
@@ -596,7 +599,8 @@
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">URL</a>]
                             [<a href="leodemo.html" target="_blank">
-                                <font color="#FF0000">LEO Satellite Demo</font></a>]
+                                <font color="#FF0000">LEO Satellite Demo</font>
+                            </a>]
                         </span>
 
                     </p>
