--- a/ws.html
+++ b/ws.html
@@ -10,19 +10,19 @@ Last Update 2021-9-7 22:09:56 by scliu
         <th>Mem</th>
     </tr>
     <tr>
-        <td>10.104.8.30</td>
+        <td>10.104.8.30 (under maintance)</td>
         <td>i9</td>
         <td>2x 2080Ti</td>
         <td>256G</td>
     </tr>
     <tr>
-        <td>10.104.11.4</td>
-        <td>i9</td>
+        <td>10.104.8.183</td>
+        <td>Xeon 8280M</td>
         <td>2x Titan RTX</td>
         <td>175G</td>
     </tr>
     <tr>
-        <td>10.104.11.8</td>
+        <td>10.104.8.230</td>
         <td>i9</td>
         <td>3x 2080Ti</td>
         <td>64G</td>
