--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <li> <b>
                         <font color="#FF0000">[2021.08]</font>
-                    </b> Dr. Zhen Gao is the recipient of 2020 MOST Cited Chinese Researchers according to Scopus (
+                    </b> Dr. Zhen Gao is the recipient of Elsevier 2020 MOST Cited Chinese Researchers (
                     <a href=" " target="_blank">
                         <font>高镇 入选爱思唯尔2020中国高被引学者</font>
                     </a>)
