--- a/index.html
+++ b/index.html
@@ -702,6 +702,7 @@
                             with Holographic Reconfigurable Intelligent Surfaces," in IEEE Transactions on
                             Communications, vol. 69, no. 7, pp. 4732-4750, July 2021.
                             [<a href="https://ieeexplore.ieee.org/document/9374451/" target="_blank">URL</a>]
+                            [<a href="https://arxiv.org/abs/2009.10963" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/Code_THzHoloRIS_CSbasedCE/Code_THzHoloRIS_CSbasedCE"
                                 target="_blank">Code</a>]
                         </span>
@@ -844,6 +845,7 @@
                                 Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 2337-2342, Feb. 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/8943174/" target="_blank">URL</a>]
+                            [<a href="https://arxiv.org/abs/1912.10668/" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/TVT_2020"
                                 target="_blank">Code</a>]
                         </span>
@@ -1079,6 +1081,7 @@
                             Reflecting Surface Aided mmWave Massive MIMO Systems," <i>2020 IEEE International
                                 Conference on Communications (ICC)</i>, Dublin, Ireland, 2020, pp. 1-6.
                             [<a href="https://ieeexplore.ieee.org/document/9149146" target="_blank">URL</a>]
+                            [<a href="https://arxiv.org/abs/2002.01629" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-Z.Wan/tree/main/ICC_2020"
                                 target="_blank">Code</a>]
                             [<a href="./Files/wzw_ICC_Slides.pdf" target="_blank">Slides</a>]
