--- a/index.html
+++ b/index.html
@@ -73,6 +73,28 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2021.12]</font>
+                    </b> Paper of Li Qiao was accepted by IEEE Journal on Selected Areas in Communications(
+                    <a href=" " target="_blank">
+                        <font>乔力 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
+                    </a>)
+                </li>
+                <li> <b>
+                        <font color="#FF0000">[2021.11]</font>
+                    </b> Yang Wang, Li Qiao, Zhuoran Li, and Yifei Zhang are awarded Social Scholarship(
+                    <a href=" " target="_blank">
+                        <font>王洋,乔力,李卓然和张翼飞获社会捐助类奖学金</font>
+                    </a>)
+                </li>
+                <li> <b>
+                        <font color="#FF0000">[2021.11]</font>
+                    </b> M.S. students Minghui Wu, Shicong Liu and Yang Wang are awarded Third Prize in Wireless AI
+                    Competition(
+                    <a href="https://mp.weixin.qq.com/s/OuTtATdeKc5t3hTKJhWvDQ" target="_blank">
+                        <font>硕士生吴铭晖,刘仕聪和王洋获得无线通信AI竞赛三等奖</font>
+                    </a>)
+                </li>
+                <li> <b>
                         <font color="#FF0000">[2021.10]</font>
                     </b> Ph.D. students Anwen Liao, Malong Ke, Ziwei Wan and M.S. student Shicong Liu are awarded
                     National Scholarship(
@@ -138,26 +160,25 @@
                     </a>)【物联网海量机器类通信】
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2021.06]</font>
-                    </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
-                    <a href="http://arxiv.org/abs/2106.13476" target="_blank">
-                        <font>柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
-                    </a>)【空基海量物联网接入】
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2021.05]</font>
-                    </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
-                    <a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">
-                        <font>刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
-                    </a>)【LEO卫星与B5G垂直应用】
-                </li>
-
-
 
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2021.06]</font>
+                        </b> Paper of Malong Ke was accepted by <b>IEEE Wireless Communications Magazine</b>(
+                        <a href="http://arxiv.org/abs/2106.13476" target="_blank">
+                            <font>柯玛龙 论文被WCM(<b>IF=11.391</b>)期刊录用</font>
+                        </a>)【空基海量物联网接入】
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2021.05]</font>
+                        </b> Paper of Shicong Liu was accepted by <b>IEEE Communications Magazine</b>(
+                        <a href="https://ieeexplore.ieee.org/document/9502642" target="_blank">
+                            <font>刘仕聪 论文被COMMAG(<b>IF=11.052</b>)期刊录用</font>
+                        </a>)【LEO卫星与B5G垂直应用】
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2021.04]</font>
                         </b> Paper of Xisuo Ma was accepted by <b>IEEE Journal on Selected Areas in Communications</b>(
@@ -614,7 +635,8 @@
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
                             [<a href="./Files/ql_slides_imnoma.pdf" target="_blank">Slides</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-L.Qiao/tree/main/TWC21" target="_blank">Codes</a>]
+                            [<a href="https://github.com/gaozhen16/Source-Code-L.Qiao/tree/main/TWC21"
+                                target="_blank">Codes</a>]
                         </span>
 
                     </p>
