--- a/index.html
+++ b/index.html
@@ -81,9 +81,16 @@
                 </li>
                 <li> <b>
                         <font color="#FF0000">[2021.11]</font>
-                    </b> Yang Wang, Li Qiao, Zhuoran Li, and Yifei Zhang are awarded Social Scholarship(
+                    </b> Li Qiao (SMC, ￥5,000), Zhuoran Li (Ceyear, ￥5,000), and Yifei Zhang (Diwen, ￥10,000) are awarded Social Scholarship(
                     <a href=" " target="_blank">
-                        <font>王洋,乔力,李卓然和张翼飞获社会捐助类奖学金</font>
+                        <font>乔力,李卓然和张翼飞获社会捐助类奖学金</font>
+                    </a>)
+                </li>
+                <li> <b>
+                        <font color="#FF0000">[2021.11]</font>
+                    </b> Yang Wang is awarded Xiaomi Special Scholarship (￥20,000)(
+                    <a href=" " target="_blank">
+                        <font>王洋获小米特等奖学金</font>
                     </a>)
                 </li>
                 <li> <b>
