--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 </li>
                 <li> <b>
                         <font color="#FF0000">[2021.11]</font>
-                    </b> Li Qiao (SMC, ￥5,000), Zhuoran Li (Ceyear, ￥5,000), and Yifei Zhang (Diwen, ￥10,000) are awarded Social Scholarship(
+                    </b> Li Qiao (SMC, ￥5,000), Zhuoran Li (Ceyear, ￥5,000), and Yifei Zhang (Diwen, ￥10,000) are
+                    awarded Social Scholarship(
                     <a href=" " target="_blank">
                         <font>乔力,李卓然和张翼飞获社会捐助类奖学金</font>
                     </a>)
@@ -590,6 +591,26 @@
                             [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank">Codes</a>]
                         </span>
                     </p>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseEight" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=634999411&bvid=BV1Hb4y1v7cg&cid=464279659&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[34] Y. Wang, <b>Z. Gao</b>, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
