--- a/summon/index.html
+++ b/summon/index.html
@@ -87,10 +87,10 @@
   </div>
   
      <!-- 判断浏览器是否屏蔽广告 -->
-  <script src="./js/adview_pic_cpc_cpm_cpa_guanggao_gg_ads_300x250.js" type="text/javascript"></script> 
+  <!-- <script src="./js/adview_pic_cpc_cpm_cpa_guanggao_gg_ads_300x250.js" type="text/javascript"></script> -->
 	<script type="text/javascript">
 	
-	 var killAdT = typeof(killads);
+	  // var killAdT = typeof(killads);
 		// <!-- if (typeof(killads)=='undefined'){ -->
 		// 	<!-- alert('广告被过滤'); -->
 		// 	<!-- } -->
@@ -102,7 +102,7 @@
 <!--<div align="center" style="font-size: 10px;color: dimgrey">advertisement</div>-->
 
 <script type="text/javascript" src="./js/ima3.js"></script>
-<script type="text/javascript" src="./ads.js"></script>
+<!-- <script type="text/javascript" src="./ads.js"></script> -->
 
 <script src="./src/settings.js" charset="utf-8"></script>
 
@@ -236,7 +236,7 @@
 <script src="./main.js" charset="utf-8"></script>
 
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
 <!-- 水工厂 -->
 <!-- <ins class="adsbygoogle"
       style="position:absolute;border-top:5px #f0f0f1 solid;background:#f0f0f1;bottom:0px;z-index:1000;display:inline-block;min-width:320px;max-width:970px;width:100%;height:60px"
@@ -258,6 +258,7 @@
     }
 </script> -->
 <!-- 果盘合合 -->
+<!--
 <script async
         data-ad-client="ca-pub-3932234672445376"
         data-ad-channel="1828757928"
@@ -268,7 +269,7 @@
 <script>window.adsbygoogle = window.adsbygoogle || [];
 const adBreak =  function(o) {adsbygoogle.push(o);}
 </script>
-
+-->
 
 <script type="text/javascript">
 
