--- a/summon/index.html
+++ b/summon/index.html
@@ -109,10 +109,10 @@
 <script type="text/javascript">
 
 	var preloader;
-    var adCompleteFlag = false;
+    var adCompleteFlag = true;
     var resCompleteFlag = false;
 
-    var adEndComplete = false;
+    var adEndComplete = true;
     var resEndComplete = false;
 	
 	judgeLanTitle();
