--- a/index.html
+++ b/index.html
@@ -1375,9 +1375,9 @@
                     </b>: </p>
                 <font size="3">
                     <ul>
-                        <li>IEEE Communications Letters</li>
-                        <li>IEEE Access</li>
-                        <li>Frontiers in Communications and Networks</li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Communications Letters</span></li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li>
+                        <li>Frontiers in Communications and Networks</li>
                     </ul>
                 </font>
                 <br />
@@ -1390,10 +1390,10 @@
                     </b>: </p>
                 <font size="3">
                     <ul>
-                        <li>IEEE Access</li>
-                        <li>IEEE Transactions on Communications</li>
-                        <li>IEEE Transactions on Vehicular Technology</li>
-                        <li>IEEE Transactions on Signal Processing</li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Communications</span></li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Vehicular Technology</span></li>
+                        <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Signal Processing</span></li>
                     </ul>
                 </font>
                 <br />
