--- a/index.html
+++ b/index.html
@@ -581,6 +581,15 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and M. Di
+                            Renzo, "Joint Activity and Blind Information Detection for UAV-Assisted Massive IoT
+                            Access", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2112.14209v2
+                            (<b>SCI Q1 Top, IF=9.619</b>)
+                            [<a href="https://arxiv.org/abs/2112.14209" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[36] M. Ke, <b>Z. Gao</b>, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu, J. Zhang, "An Edge
                             Computing Paradigm for Massive IoT Connectivity Over High-Altitude Platform Networks," in
                             IEEE Wireless Communications, vol. 28, no. 5, pp. 102-109, October 2021.
