--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and M. Di
+                        <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and
+                            M. Di
                             Renzo, "Joint Activity and Blind Information Detection for UAV-Assisted Massive IoT
                             Access", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2112.14209v2
                             (<b>SCI Q1 Top, IF=9.619</b>)
@@ -1153,6 +1154,77 @@
                     <font style="font-size: 18px;">Conferences</font>
                 </b>: </p>
             <font size="3">
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[26] X. Zhou and <b>Z. Gao</b>, "Joint Active User Detection and Channel Estimation for
+                            Grant-Free NOMA-OTFS in LEO Constellation Internet-of-Things," <i>2021 IEEE/CIC ICCC</i>,
+                            2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580242" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[25] Y. Wang and <b>Z. Gao</b>, "Three-Dimensional Trajectory Design for Multi-User MISO UAV
+                            Communications: A Deep Reinforcement Learning Approach," <i>2021 IEEE/CIC ICCC</i>,
+                            2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580401" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[24] A. Liao, <b>Z. Gao</b>, Y. Yang, H. H. Nguyen, H. Wang and H. Yin, "Angle Estimation for
+                            Terahertz Ultra-Massive MIMO-Based Space-to-Air Communications," <i>2021 IEEE/CIC ICCC</i>,
+                            2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580418" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[23] L. Qiao, <b>Z. Gao</b>, C. He, Z. Xiao, D. Zheng and J. Zhang, "Non-Coherent Grant-Free
+                            Massive IoT Access for mMTC: An Index Modulation Perspective," <i>2021 IEEE/CIC ICCC</i>,
+                            2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580224" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[22] X. Ma, <b>Z. Gao</b> and D. Wu, "Model-Driven Deep Learning Based Channel Estimation
+                            for
+                            Millimeter-Wave Massive Hybrid MIMO Systems," <i>2021 IEEE/CIC ICCC</i>, 2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580308" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[21] <b>Z. Gao</b>, K. Ying, C. He, Z. Xiao, D. Zheng and J. Zhang, "Grant-Free Random
+                            Access in
+                            Massive MIMO Based LEO Satellite Internet of Things," <i>2021 IEEE/CIC ICCC</i>, 2021, pp.
+                            1-5. (<font color="#FF0000">Best Paper</font>)
+                            [<a href="https://ieeexplore.ieee.org/document/9580408" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
+                <ul>
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[20] Y. Mei and <b>Z. Gao</b>, "CS-Based CSIT Estimation for Downlink Pilot
+                            Decontamination in Multi-Cell FDD Massive MIMO," <i>2021 IEEE/CIC ICCC</i>, 2021, pp. 1-5.
+                            [<a href="https://ieeexplore.ieee.org/document/9580398" target="_blank">URL</a>]
+                        </span>
+                    </p>
+                </ul>
+
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[19] Y. Mei, <b>Z. Gao</b>, D. Mi, P. Xiao and M.-S. Alouini, "Compressive Sensing Based
